upload images only (php filter)

--- a/html/post.html
+++ b/html/post.html
@@ -58,7 +58,7 @@
                 </button>
                 <div class="userbox bubble static breakword" id="render"></div>
                 <label id="files">
-                    <p>Lier des fichiers</p>
+                    <p>Lier des images</p>
                     <input type="file" id="file" name="upload[]" multiple/>
                 </label>
                 <button id="submitbutton" onclick="" type="button" class="styled">
