adapted upload mechanic to all types of file

--- a/html/post.html
+++ b/html/post.html
@@ -63,7 +63,7 @@
                     <p id="render"></p>
                 </div>
                 <label id="files">
-                    <p>Lier des images</p>
+                    <p>Lier des fichiers</p>
                     <input type="file" id="file" name="upload[]" multiple/>
                 </label>
                 <button id="submitbutton" onclick="" type="button" class="styled">
